correct dropdown padding to align with filter on tablet, stop sentance breaking on mobile with reduced padding, partial fix for  #1853

--- a/meinberlin/assets/scss/components/_filter_bar.scss
+++ b/meinberlin/assets/scss/components/_filter_bar.scss
@@ -29,7 +29,7 @@ $divider-margin: 1.25rem;
 }
 
 .filter-bar--stacked {
-    padding: $padding 2*$padding;
+    padding: $padding;
     margin-bottom: $r-spacer;
 }
 
@@ -146,7 +146,7 @@ $divider-margin: 1.25rem;
     }
 
     @media screen and (min-width: $breakpoint-md) {
-        padding: 2*$padding 4*$padding $padding 4*$padding;
+        padding: 0.5*$padding 4*$padding 2*$padding 4*$padding;
     }
 }
 
@@ -154,9 +154,15 @@ $divider-margin: 1.25rem;
     position: absolute;
     left: 0;
     right: 0;
-    margin-left: 4*$r-spacer;
-    margin-right: 4*$r-spacer;
+    margin-left: 1*$r-spacer;
+    margin-right: 1*$r-spacer;
     z-index: 1;
+
+    @media screen and (min-width: $breakpoint-md) {
+        margin-top: 2*$r-spacer;
+        margin-left: 4*$r-spacer;
+        margin-right: 4*$r-spacer;
+    }
 }
 
 .filter-bar__question {
